// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with authors 1`] = `
<section
  className="hard-sides hard-top"
>
  <h2
    className="capitalize"
  >
    test
  </h2>
  <h6
    className="capitalize soft-double-bottom flush"
  >
    By: 
    jim, bob
  </h6>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test</h1>",
      }
    }
  />
</section>
`;

exports[`renders without authors 1`] = `
<section
  className="hard-sides hard-top"
>
  <h2
    className="capitalize"
  >
    test
  </h2>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test</h1>",
      }
    }
  />
</section>
`;

exports[`test renders with authors 1`] = `
<section
  className="hard-sides hard-top">
  <h2
    className="capitalize">
    test
  </h2>
  <h6
    className="capitalize soft-double-bottom flush">
    By: 
    jim, bob
  </h6>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test</h1>",
      }
    } />
</section>
`;

exports[`test renders without authors 1`] = `
<section
  className="hard-sides hard-top">
  <h2
    className="capitalize">
    test
  </h2>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<h1>test</h1>",
      }
    } />
</section>
`;
